# 2dxcamhook

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
cmake/: VersionHeader.in  VersionOffsets.in
lib/: avs2-core.lib
src/: avs2-log.h  bm2dx.h  main.cc  offsets.h  receiver.cc  receiver.h
src/game/: LDJ-003-2020092900.cc  LDJ-003-2021091500.cc  LDJ-003-2022082400.cc  LDJ-003-2023101800.cc  LDJ-010-2020092900.cc  LDJ-010-2021091500.cc  LDJ-010-2022082400.cc  LDJ-010-2023090500.cc  LDJ-012-2023090500.cc
versions/27/: LDJ-003-2020092900.cmake  LDJ-010-2020092900.cmake
versions/28/: LDJ-003-2021091500.cmake  LDJ-010-2021091500.cmake
versions/29/: LDJ-003-2022082400.cmake  LDJ-010-2022082400.cmake
versions/30/: LDJ-010-2023090500.cmake  LDJ-012-2023090500.cmake
versions/31/: LDJ-010-2024082600.cmake  LDJ-012-2024082600.cmake
versions/32/: LDJ-010-2025072900.cmake  LDJ-010-2025082500.cmake
versions/33/: LDJ-010-2025091700.cmake  LDJ-012-2025091700.cmake
